# hermit-rs

./: .gitignore  .gitlab-ci.yml  .gitmodules  .travis.yml  Cargo.toml  Dockerfile  Dockerfile.hermit  Dockerfile.qemu  README.md  bors.toml  rust-toolchain  rust-toolchain.toml  rustfmt.toml
.cargo/: config  config.toml
.github/: auto_assign.yml  dependabot.yml
.github/workflows/: build.yml  ci.yml  clippy.yml  docker.yml  format.yml  kvm.yml  kvm_test.yml  publish.yml  publish_docs.yml  test.yml  test_kvm.yml
benches/: bench.json
benches/alloc/: Cargo.toml
benches/alloc/src/: main.rs
benches/micro/: Cargo.toml
benches/micro/src/: main.rs
benches/micro/src/benches/: mod.rs
benches/micro_benchmarks/: Cargo.toml
benches/micro_benchmarks/src/: main.rs
benches/micro_benchmarks/src/benches/: mod.rs
benches/multithreaded/: Cargo.toml
benches/multithreaded/src/: main.rs
benches/multithreaded_benchmark/: Cargo.toml
benches/multithreaded_benchmark/src/: main.rs
benches/mutex/: Cargo.toml
benches/mutex_benchmark/: Cargo.toml
benches/netbench/: Cargo.toml  README.md  run.sh
benches/netbench/src/: benchmark.rs  bw.rs  config.rs  connection.rs  latency.rs  lib.rs  main.rs  print_utils.rs  rust-tcp-bw.rs  rust-tcp-latency.rs  rust-udp-bw.rs  rust-udp-latency.rs  threading.rs
benches/netbench/src/rust-tcp-bw/: client.rs  server.rs
benches/netbench/src/rust-tcp-latency/: client.rs  server.rs
benches/netbench/src/rust-udp-bw/: client.rs  server.rs
benches/netbench/src/rust-udp-latency/: client.rs  server.rs
benches/rust-tcp-io-perf/: Cargo.toml  LICENSE  README.md
benches/rust-tcp-io-perf/src/: config.rs  connection.rs
benches/rust-tcp-io-perf/src/rust-tcp-bw/: client.rs
benches/rust-tcp-io-perf/src/rust-tcp-latency/: client.rs
benches/rust-tcp-io-perf/src/rust-udp-bw/: server.rs
benches/rust-tcp-io-perf/src/rust-udp-latency/: client.rs  server.rs
benches/startup/: Cargo.toml
benches/startup/src/: main.rs
benches/startup_benchmark/: Cargo.toml
demo/: Cargo.toml
demo/src/: main.rs
demo/src/tests/: laplace.rs  matmul.rs  mod.rs
examples/axum/: Cargo.toml
examples/axum-example/: Cargo.toml
examples/axum/src/: main.rs
examples/demo/: Cargo.toml
examples/demo/src/: fs.rs  laplace.rs  main.rs  matmul.rs  matrix_multiplication.rs  pi_sequential.rs  tests.rs  thread.rs
examples/demo/src/tests/: laplace.rs  matmul.rs  mod.rs  thread_local.rs
examples/dns/: Cargo.toml
examples/dns/src/: main.rs
examples/false/: Cargo.toml
examples/false/src/: main.rs
examples/fibonacci/: Cargo.toml
examples/fibonacci/src/: lib.rs  main.rs
examples/fork/: Cargo.toml
examples/fork/src/: main.rs
examples/fs/: Cargo.toml
examples/fs/src/: display.rs  main.rs
examples/fuse_test/: Cargo.toml
examples/fuse_test/src/: main.rs
examples/hello_world/: Cargo.toml
examples/hello_world/src/: main.rs
examples/hermit-wasm/: Cargo.toml  README.md  build.rs
examples/hermit-wasm/src/: capi.rs  lib.rs  main.rs  preview1.rs
examples/hermit-wasm/src/arch/: mod.rs
examples/hermit-wasm/src/arch/aarch64/: mod.rs
examples/hermit-wasm/src/arch/riscv64/: setjmp.s
examples/hermit-wasm/src/arch/x86_64/: longjmp.s
examples/httpd/: Cargo.toml
examples/httpd/src/: main.rs
examples/hyper/: Cargo.toml
examples/hyper/src/: main.rs
examples/loopback/: Cargo.toml
examples/loopback/src/: main.rs
examples/micro/src/benches/: mem.rs
examples/miotcp/: Cargo.toml
examples/miotcp/src/: main.rs
examples/mioudp/: Cargo.toml
examples/mioudp/src/: main.rs
examples/mutex/: Cargo.toml
examples/mutex/src/: main.rs
examples/nvme-test/: .gitignore  Cargo.toml  Makefile  README.md
examples/nvme-test/src/: main.rs  syscalls.rs  tests.rs
examples/poll/: Cargo.toml
examples/poll/src/: main.rs
examples/polling/: Cargo.toml
examples/polling/src/: main.rs
examples/rftrace-example/: Cargo.toml
examples/rftrace-example/src/: main.rs
examples/rusty_demo/src/: main.rs  mandelbrot.rs  matmul.rs  pi.rs  thread.rs
examples/smol-rs/: Cargo.toml
examples/spawn/: Cargo.toml
examples/spawn/src/: main.rs
examples/stdin/: Cargo.toml
examples/stdin/src/: main.rs
examples/testtcp/: Cargo.toml
examples/testtcp/src/: main.rs
examples/testudp/: Cargo.toml
examples/testudp/src/: main.rs
examples/thread_test/: Cargo.toml
examples/thread_test/src/: main.rs
examples/tls/: Cargo.toml
examples/tls/src/: main.rs  refresh-certificates.sh  sample.pem  sample.rsa
examples/tokio/: Cargo.toml
examples/tokio-minimal/: Cargo.toml
examples/tokio/src/: main.rs
examples/true/: Cargo.toml
examples/true/src/: main.rs
examples/vsock/: Cargo.toml
examples/vsock/src/: main.rs  vsock.rs
examples/vsock_server/: Cargo.toml
examples/vsock_server/src/: main.rs  vsock.rs
examples/wasm-test/: Cargo.toml
examples/wasm-test/src/: main.rs
examples/wasmtime/: Cargo.toml  Makefile  build.rs
examples/wasmtime/src/: capi.rs  main.rs  preview1.rs
examples/wasmtime/src/arch/aarch64/: longjmp.s  setjmp.s
examples/wasmtime/src/arch/riscv64/: longjmp.s
examples/wasmtime/src/arch/x86_64/: setjmp.s
examples/webserver/: Cargo.toml
examples/webserver/src/: main.rs
hermit/: Cargo.toml  README.md  build.rs
hermit-abi/: Cargo.toml  README.md
hermit-abi/src/: bindings.rs  lib.rs  mutex.rs  tcplistener.rs  tcpstream.rs
hermit-masos/: Cargo.toml
hermit-masos/src/: allocator.rs  lib.rs  math.rs  x86_64.rs
hermit-sys/: Cargo.toml  README.md  aarch64-duplicate-symbols  build.rs  x86_64-duplicate-symbols
hermit-sys/src/: cmath.rs  dummy.rs  lib.rs  rlib.rs
hermit-sys/src/net/: device.rs  executor.rs  mod.rs  mutex.rs  uhyve.rs  virtio.rs  waker.rs
hermit/src/: dummy.rs  lib.rs
hermit/src/syscall/: aarch64.rs  allocator.rs  mod.rs  x86_64.rs
k8s/: httpd.yml
netbench/: Cargo.toml  README.md
netbench/src/: config.rs  connection.rs  lib.rs  print_utils.rs  threading.rs
netbench/src/rust-tcp-bw/: client.rs  server.rs
netbench/src/rust-tcp-latency/: client.rs  server.rs
src/: lib.rs
