[workspace]
resolver = "2"
members = [
    "benches/alloc",
    "benches/micro",
    "benches/netbench",
    "examples/axum",
    "examples/demo",
    "examples/fuse_test",
    "examples/hello_world",
    "examples/httpd",
    "examples/miotcp",
    "examples/mioudp",
    "examples/polling",
    "examples/rftrace-example",
    "examples/testtcp",
    "examples/testudp",
    "examples/tls",
    "examples/thread_test",
    "examples/tokio",
    "examples/webserver",
    "examples/dns",
    "examples/mutex",
    "examples/wasm-test",
    "examples/wasmtime",
    "examples/vsock",
    "hermit",
    "hermit-abi",
]

[patch.crates-io]
hyper-util = { git = "https://github.com/hermit-os/hyper-util.git", branch = "v/0.1.8" }
socket2 = { git = "https://github.com/hermit-os/socket2.git", branch = "v/0.5.7" }
tokio = { git = "https://github.com/hermit-os/tokio.git", branch = "v/tokio-1.40.0" }
tokio-rustls = { git = "https://github.com/hermit-os/tokio-rustls.git", branch = "v/0.26.0" }
