[workspace]
resolver = "2"
members = [
    "benches/alloc",
    "benches/micro",
    "benches/netbench",
    "benches/mutex",
    "benches/startup",
    "benches/multithreaded",
    "examples/axum",
    "examples/demo",
    "examples/fs",
    "examples/fuse_test",
    "examples/hello_world",
    "examples/httpd",
    "examples/loopback",
    "examples/miotcp",
    "examples/mioudp",
    "examples/polling",
    "examples/rftrace-example",
    "examples/stdin",
    "examples/testtcp",
    "examples/testudp",
    "examples/tls",
    "examples/thread_test",
    "examples/tokio",
    "examples/webserver",
    "examples/dns",
    "examples/wasm-test",
    "examples/hermit-wasm",
    "examples/vsock",
    "hermit",
    "hermit-abi",
]

[patch.crates-io]
socket2 = { git = "https://github.com/hermit-os/socket2.git", branch = "v0.5.x" }
tokio = { git = "https://github.com/hermit-os/tokio.git", branch = "v/tokio-1.45.0" }

[profile.profiling]
inherits = "release"
debug = "line-tables-only"
