[package]
name = "hermit-abi"
version = "0.3.0"
authors = ["Stefan Lankes"]
license = "MIT OR Apache-2.0"
edition = "2021"
description = """
hermit-abi is small interface to call functions from the unikernel RustyHermit.
It is used to build the target `x86_64-unknown-hermit`.
"""
repository = "https://github.com/hermitcore/rusty-hermit"
keywords = ["unikernel", "libos"]
categories = ["os"]

[dependencies]
core = { version = "1.0.0", optional = true, package = "rustc-std-workspace-core" }
alloc = { version = "1.0.0", optional = true, package = "rustc-std-workspace-alloc" }
compiler_builtins = { version = "0.1", optional = true }

[features]
default = []
rustc-dep-of-std = ["core", "alloc", "compiler_builtins/rustc-dep-of-std"]
