[package]
name = "hermit-sys"
version = "0.4.0"
authors = ["Stefan Lankes"]
license = "MIT OR Apache-2.0"
description = "FFI bindings to HermitCore"
repository = "https://github.com/hermitcore/rusty-hermit"
readme = "README.md"
keywords = ["unikernel", "libos"]
categories = ["os"]
links = "hermit"
build = "build.rs"
edition = "2021"
documentation = "https://hermitcore.github.io/rusty-hermit/hermit_sys"

[features]
default = [
    "acpi",
    "pci",
    "pci-ids",
    "smp",
    "fsgsbase",
]

aarch64-qemu-stdout = []
acpi = []
dhcpv4 = []
fsgsbase = []

# Build the kernel with function instrument code for mcount-based tracing
instrument = ["rftrace"]

pci = []
pci-ids = ["pci"]
smp = []
tcp = []
trace = []
vga = []

[dependencies]
rftrace = { version = "0.1", optional = true, features = ["autokernel", "buildcore", "interruptsafe"] }

[build-dependencies]
flate2 = "1"
ureq = "2.4"
tar = "0.4"
