[package]
name = "hermit-sys"
version = "0.4.0"
authors = ["Stefan Lankes"]
license = "MIT OR Apache-2.0"
description = "FFI bindings to HermitCore"
repository = "https://github.com/hermitcore/rusty-hermit"
keywords = ["unikernel", "libos"]
categories = ["os"]
links = "hermit"
edition = "2021"

[features]
default = [
    "acpi",
    "pci",
    "pci-ids",
    "smp",
    "fsgsbase",
]

acpi = []
dhcpv4 = []
fsgsbase = []

# Build the kernel with function instrument code for mcount-based tracing
instrument = []

pci = []
pci-ids = ["pci"]
smp = []
tcp = []
trace = []
vga = []

[build-dependencies]
flate2 = "1"
ureq = "2.4"
tar = "0.4"
