[package]
name = "hermit-sys"
version = "0.5.3"
authors = ["Stefan Lankes"]
license = "MIT OR Apache-2.0"
description = "FFI bindings to HermitCore"
repository = "https://github.com/hermitcore/rusty-hermit"
keywords = ["unikernel", "libos"]
categories = ["os"]
links = "hermit"
edition = "2021"

[features]
default = [
    "acpi",
    "pci",
    "pci-ids",
    "smp",
    "fsgsbase",
    "tcp",
    "dhcpv4",
    "fs",
]

acpi = []
dhcpv4 = []
fsgsbase = []

# Build the kernel with function instrument code for mcount-based tracing
instrument = []

pci = []
pci-ids = ["pci"]

# Enables -Z randomize-layout in the kernel
randomize-layout = []

smp = []
tcp = []
trace = []
vga = []
fs = []

# if this feature isn't set, the Virtio interface will be used
rtl8139 = ["tcp", "pci"]

[build-dependencies]
flate2 = "1"
ureq = "2.4"
tar = "0.4"
