[package]
name = "hermit"
version = "0.13.0"
authors = [
    "Stefan Lankes <slankes@eonerc.rwth-aachen.de>",
    "Martin Kröning <mkroening@posteo.net>",
]
edition = "2021"
description = "The Hermit unikernel for Rust."
repository = "https://github.com/hermit-os/hermit-rs"
license = "MIT OR Apache-2.0"
keywords = ["unikernel", "libos"]
categories = ["os"]
