[package]
name = "hermit"
version = "0.13.2"
authors = [
	"Stefan Lankes <slankes@eonerc.rwth-aachen.de>",
	"Martin Kröning <mkroening@posteo.net>",
]
edition = "2021"
description = "The Hermit unikernel for Rust."
repository = "https://github.com/hermit-os/hermit-rs"
license = "MIT OR Apache-2.0"
keywords = ["unikernel", "libos"]
categories = ["os"]
links = "hermit"

[dependencies]
hermit-abi = { version = "0.4", optional = true }
generic_once_cell = { version = "0.1", optional = true }
libm = { version = "0.2", optional = true }
spinning_top = { version = "0.3", optional = true }
take-static = { version = "0.1", optional = true }
talc = { version = "4.4", default-features = false, features = ["lock_api"], optional = true }

[features]
default = []
common-os = [
	"dep:hermit-abi",
	"dep:generic_once_cell",
	"dep:libm",
	"dep:spinning_top",
	"dep:take-static",
	"dep:talc",
]

## Links against libc.a.
libc = []

#! ### Kernel Features
#!
#! For details, see the kernel [docs].
#!
#! [docs]: https://hermit-os.github.io/kernel

masos = []
mman = []
newlib = []
uhyve = []
acpi = []
fsgsbase = []
pci = []
pci-ids = []
semihosting = []
smp = []
tcp = []
udp = []
dhcpv4 = []
dns = []
net-trace = []
write-pcap-file = []
virtio-net = []
rtl8139 = []
gem-net = []
virtio-console = []
virtio-fs = []
virtio-vsock = []
vga = []
idle-poll = []
alloc-stats = []
instrument-mcount = []
kernel-stack = []
randomize-layout = []
shell = []
strace = []
document-features = []
net = []
virtio = []
warn-prebuilt = []
console = []
fs = []
fuse = []
mmap = []
nostd = []
trace = []
vsock = []

[build-dependencies]
cc = "1"
home = "0.5"
