[package]
name = "alloc_benchmarks"
authors = ["Stefan Lankes <slankes@eonerc.rwth-aachen.de>"]
edition = "2021"

[dependencies]
fastrand = "2.0.0"

[target.'cfg(target_os = "hermit")'.dependencies.hermit]
path = "../../hermit"
default-features = false

[target.'cfg(target_arch = "riscv64")'.dependencies]
riscv = "0.11"

[features]
default = ["pci", "acpi"]
vga = ["hermit/vga"]
pci = ["hermit/pci"]
pci-ids = ["hermit/pci-ids"]
acpi = ["hermit/acpi"]
fsgsbase = ["hermit/fsgsbase"]
smp = ["hermit/smp"]
instrument = ["hermit/instrument"]
