[package]
name = "alloc_benchmarks"
version = "0.1.0"
authors = ["Stefan Lankes <slankes@eonerc.rwth-aachen.de>"]
edition = "2021"
publish = false

[dependencies]
fastrand = "2.0.0"

[target.'cfg(target_os = "hermit")'.dependencies.hermit]
path = "../../hermit"
default-features = false

[target.'cfg(target_arch = "riscv64")'.dependencies]
riscv = "0.11"

[features]
default = ["hermit/acpi", "hermit/pci"]
