[package]
name = "alloc_benchmarks"
authors = ["Stefan Lankes <slankes@eonerc.rwth-aachen.de>"]
edition = "2021"

[dependencies]
fastrand = "2.0.0"

[target.'cfg(target_os = "hermit")'.dependencies]
hermit = { path = "../../hermit", default-features = false }

[target.'cfg(target_arch = "riscv64")'.dependencies]
riscv = "0.13"

[features]
default = ["hermit/acpi", "hermit/pci"]
