[package]
name = "micro_benchmarks"
version = "0.1.0"
authors = ["Stefan Lankes <slankes@eonerc.rwth-aachen.de>"]
edition = "2021"
publish = false

[dependencies]
rayon = "1.5"

[target.'cfg(target_os = "hermit")'.dependencies.hermit]
path = "../../hermit"
default-features = false

[target.'cfg(target_arch = "aarch64")'.dependencies]
aarch64 = { version = "0.0.10", default-features = false }
tock-registers = "0.8"

[target.'cfg(target_os = "linux")'.dependencies]
syscalls = { version = "0.6", default-features = false }

[features]
default = ["pci", "acpi", "smp"]
vga = ["hermit/vga"]
pci = ["hermit/pci"]
pci-ids = ["hermit/pci-ids"]
acpi = ["hermit/acpi"]
fsgsbase = ["hermit/fsgsbase"]
smp = ["hermit/smp"]
instrument = ["hermit/instrument"]
