[package]
name = "micro_benchmarks"
version = "0.1.0"
authors = ["Stefan Lankes <slankes@eonerc.rwth-aachen.de>"]
edition = "2021"
publish = false

[dependencies]
rayon = "1.5"

[target.'cfg(target_os = "hermit")'.dependencies.hermit]
path = "../../hermit"
default-features = false

[target.'cfg(target_arch = "aarch64")'.dependencies]
aarch64 = { version = "0.0.11", default-features = false }

[target.'cfg(target_arch = "riscv64")'.dependencies]
riscv = "0.11"

[target.'cfg(target_os = "linux")'.dependencies]
syscalls = { version = "0.6", default-features = false }

[features]
default = ["hermit/acpi", "hermit/pci", "hermit/smp"]
