[package]
name = "micro_benchmarks"
authors = ["Stefan Lankes <slankes@eonerc.rwth-aachen.de>"]
edition = "2021"

[dependencies]
rayon = "1.11"
hermit_bench_output = "0.1.1"

[target.'cfg(target_os = "hermit")'.dependencies]
hermit = { path = "../../hermit", default-features = false }

[target.'cfg(target_arch = "aarch64")'.dependencies]
aarch64-cpu = "10"

[target.'cfg(target_arch = "riscv64")'.dependencies]
riscv = "0.15"

[target.'cfg(target_os = "linux")'.dependencies]
syscalls = { version = "0.6", default-features = false }

[features]
default = ["hermit/acpi", "hermit/pci", "hermit/smp"]
