[package]

name = "rust-tcp-io-perf"
authors = ["Lorenzo Martini <lmartini@student.ethz.ch>"]
edition = "2021"
readme = "README.md"

description = "A Rust program to measure bandwidth or latency over a Rust TCP connection"

[dependencies]
bytes = "1.1"
clap = { version ="4.1", features = ["derive"] }
core_affinity = "0.8"
hdrhist = "0.5"

[target.'cfg(target_os = "hermit")'.dependencies]
hermit = { path = "../../hermit", default-features = false }

[features]
default = ["pci", "acpi", "tcp", "smp"]
vga = ["hermit/vga"]
dhcpv4 = ["hermit/dhcpv4"]
pci = ["hermit/pci"]
pci-ids = ["hermit/pci-ids"]
acpi = ["hermit/acpi"]
fsgsbase = ["hermit/fsgsbase"]
smp = ["hermit/smp"]
tcp = ["hermit/tcp"]
instrument = ["hermit/instrument"]
rtl8139 = ["hermit/rtl8139"]

[[bin]]
name = "server-bw"
path = "src/rust-tcp-bw/server.rs"

[[bin]]
name = "client-bw"
path = "src/rust-tcp-bw/client.rs"

[[bin]]
name = "server-latency"
path = "src/rust-tcp-latency/server.rs"

[[bin]]
name = "client-latency"
path = "src/rust-tcp-latency/client.rs"
