[package]

name = "rust-tcp-io-perf"
authors = [
    "Lorenzo Martini <lmartini@student.ethz.ch>",
    "Jonathan Klimt <jonathan.klimt@eonerc.rwth-aachen.de>"
]
edition = "2021"
readme = "README.md"

description = "A Rust program to measure bandwidth or latency over a Rust TCP connection"

[dependencies]
bytes = "1.11"
clap = { version ="4.6", features = ["derive"] }
core_affinity = "0.8"
hdrhist = "0.5"
hermit_bench_output = "0.1.0"

[target.'cfg(target_os = "hermit")'.dependencies]
hermit = { path = "../../hermit", default-features = false }

[features]
default = ["hermit/acpi", "hermit/pci", "hermit/smp", "hermit/tcp", "hermit/udp"]
