[package]
name = "rusty_demo"
version = "0.1.0"
authors = ["Stefan Lankes <slankes@eonerc.rwth-aachen.de>"]
edition = "2021"
publish = false

[[bin]]
name = "rusty_demo"
path = "src/main.rs"

[[bin]]
name = "pi_sequential"
path = "src/pi_sequential.rs"

[[bin]]
name = "matrix_multiplcation"
path = "src/matrix_multiplication.rs"

[dependencies]
rayon = "1.5"
num_cpus = "1.13"

[target.'cfg(target_os = "hermit")'.dependencies.hermit]
path = "../../hermit"
default-features = false

[target.'cfg(target_arch = "aarch64")'.dependencies.aarch64]
version = "0.0.11"
default-features = false

[features]
default = ["fs", "hermit/acpi", "hermit/pci", "hermit/smp"]
fs = ["hermit/fs"]
