[package]
name = "rusty_demo"
authors = ["Stefan Lankes <slankes@eonerc.rwth-aachen.de>"]
edition = "2021"

[dependencies]
ndarray = { version = "0.16", features = ["rayon"] }
rayon = "1.5"

[target.'cfg(target_os = "hermit")'.dependencies]
hermit = { path = "../../hermit", default-features = false }

[features]
default = ["hermit/acpi", "hermit/pci", "hermit/smp"]
fs = ["hermit/fs"]
