[package]
name = "rusty_demo"
authors = ["Stefan Lankes <slankes@eonerc.rwth-aachen.de>", "Marco Ruppert-Maas <marco.ruppert-maas@studium.fernuni-hagen.de>"]
edition = "2024"

[dependencies]
rayon = "1.11"

[target.'cfg(target_os = "hermit")'.dependencies]
hermit = { path = "../../hermit", default-features = false }

[features]
default = ["hermit/acpi", "hermit/pci", "hermit/smp"]
fs = ["hermit/virtio-fs"]
