[package]
name = "dns"
authors = ["Stefan Lankes <slankes@eonerc.rwth-aachen.de>"]
edition = "2021"

[dependencies]
time = "0.3"
tiny_http = "0.12"
hermit-abi = { path = "../../hermit-abi" }

[target.'cfg(target_os = "hermit")'.dependencies]
hermit = { path = "../../hermit", default-features = false }

[features]
default = ["hermit/acpi", "hermit/pci", "hermit/pci-ids", "hermit/tcp", "hermit/dns"]
