[package]
name = "hello_world"
version = "0.1.0"
authors = ["Stefan Lankes <slankes@eonerc.rwth-aachen.de>"]
edition = "2021"
publish = false

[target.'cfg(target_os = "hermit")'.dependencies.hermit-sys]
path = "../../hermit-sys"
default-features = false
features = ["acpi", "pci", "with_submodule"]
