[package]
name = "hello_world"
authors = ["Stefan Lankes <slankes@eonerc.rwth-aachen.de>"]
edition = "2021"

[target.'cfg(target_os = "hermit")'.dependencies.hermit]
path = "../../hermit"
default-features = false

[features]
default = ["pci", "acpi"]
vga = ["hermit/vga"]
pci = ["hermit/pci"]
pci-ids = ["hermit/pci-ids"]
acpi = ["hermit/acpi"]
fsgsbase = ["hermit/fsgsbase"]
smp = ["hermit/smp"]
instrument = ["hermit/instrument"]
fs = ["hermit/fs"]
