[package]
name = "hermit-wasm"
version = "0.1.1"
edition = "2024"
authors = ["Stefan Lankes <slankes@eonerc.rwth-aachen.de>"]
repository = "https://github.com/hermit-os/hermit-rs/tree/main/examples/hermit-wasm"
description = "Running WASM modules inside a lightweight virtual machine"
readme = "README.md"
license = "MIT/Apache-2.0"
keywords = ["wasm", "webassembly"]
categories = ["os", "wasm"]

[lib]
name = "hermit_wasm"

[features]
default = []
fs = ["hermit/fs"]
tcp = ["hermit/tcp"]
udp = ["hermit/udp"]
dhcpv4 = ["hermit/dhcpv4"]

[dependencies]
anyhow = "1.0"
clap = { version ="4.5", features = ["derive", "env"] }
chrono = { version = "0.4" }
bitflags = "2.10"
cfg-if = "1"
log = { version = "0.4" } #, features = ["kv_unstable"]}
libc = "0.2"
env_logger = { version = "0.11", default-features = false }
wasi = "0.11"
wasmtime = { version = "38", default-features = false, features = ["std", "runtime", "cranelift", "threads", "parallel-compilation", "custom-virtual-memory", "gc", "gc-drc", 'gc-null',] } #"pooling-allocator", "incremental-cache", "component-model"] }
zerocopy = { version = "0.8", default-features = false, features = ["alloc", "derive", "simd-nightly"] }

[target.'cfg(target_os = "hermit")'.dependencies]
hermit = { version = "=0.11", path = "../../hermit", default-features = false, features = ["acpi", "pci", "fsgsbase", "mmap"] }
hermit-abi = { version = "=0.5", path = "../../hermit-abi", default-features = false }
