[package]
name = "httpd"
authors = ["Stefan Lankes <slankes@eonerc.rwth-aachen.de>"]
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
tiny_http = "0.12"

[dependencies.time]
version = "0.3"

[target.'cfg(target_os = "hermit")'.dependencies.hermit]
path = "../../hermit"
default-features = false

[features]
default = ["hermit/acpi", "hermit/pci", "hermit/pci-ids", "hermit/tcp"]
ci = []
