[package]
name = "mioudp"
authors = ["Stefan Lankes <slankes@eonerc.rwth-aachen.de>"]
edition = "2021"

[dependencies]
mio = { version = "1", features = ["net", "os-poll"] }
env_logger = { version = "0.11.2", default-features = false }
log = { version = "0.4.28" }

[target.'cfg(target_os = "hermit")'.dependencies]
hermit = { path = "../../hermit", default-features = false }

[features]
default = ["hermit/acpi", "hermit/pci", "hermit/pci-ids", "hermit/udp"]
