[package]
name = "nvme-test"
authors = ["Valentin Kunisch <v.qnish@protonmail.com>"]
edition = "2024"

[target.'cfg(target_os = "hermit")'.dependencies]
hermit = { path = "../../hermit", default-features = false, features = ["nvme"] }

[dependencies]
rand = "0.9.2"
vroom = { git = "https://github.com/valopok/vroom", branch = "main", default-features = false }
