[package]
name = "poll"
authors = ["Stefan Lankes <slankes@eonerc.rwth-aachen.de>"]
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
polling = { git="https://github.com/smol-rs/polling.git" }
env_logger = { version = "0.11.2", default-features = false }
log = { version = "0.4.8" }

[target.'cfg(target_os = "hermit")'.dependencies.hermit]
path = "../../hermit"
default-features = false

[features]
default = ["pci", "pci-ids", "acpi", "tcp", "dhcpv4"]
vga = ["hermit/vga"]
dhcpv4 = ["hermit/dhcpv4"]
pci = ["hermit/pci"]
pci-ids = ["hermit/pci-ids"]
acpi = ["hermit/acpi"]
fsgsbase = ["hermit/fsgsbase"]
smp = ["hermit/smp"]
tcp = ["hermit/tcp"]
udp = ["hermit/udp"]
instrument = ["hermit/instrument"]
trace = ["hermit/trace"]
rtl8139 = ["hermit/rtl8139"]
