[package]
name = "poll"
authors = ["Stefan Lankes <slankes@eonerc.rwth-aachen.de>"]
edition = "2021"

[dependencies]
polling = "3.9"
env_logger = { version = "0.11.2", default-features = false }
log = { version = "0.4.8" }

[target.'cfg(target_os = "hermit")'.dependencies]
hermit = { path = "../../hermit", default-features = false }

[features]
default = ["hermit/acpi", "hermit/dhcpv4", "hermit/pci", "hermit/pci-ids", "hermit/tcp"]
