[package]
name = "rftrace-example"
version = "0.1.0"
authors = ["Martin Kröning <mkroening@posteo.net>"]
edition = "2021"
publish = false

[dependencies]
rftrace = "0.2"
rftrace-frontend = "0.2"

[target.'cfg(target_os = "hermit")'.dependencies]
hermit = { path = "../../hermit" }

[features]
instrument-kernel = ["hermit/instrument"]
