[package]
name = "tls"
version = "0.26.0"
edition = "2021"
rust-version = "1.64"
license = "Apache-2.0 OR ISC OR MIT"
description = "Rustls+hyper integration for pure rust HTTPS"
homepage = "https://github.com/rustls/hyper-rustls"
repository = "https://github.com/rustls/hyper-rustls"
documentation = "https://docs.rs/hyper-rustls/"

[dependencies]
http = "1"
hyper = { version = "1", default-features = false }
http-body-util = "0.1"
hyper-util = { version = "0.1", default-features = false, features = ["server-auto", "tokio"] }
rustls-pemfile = "2"
tokio = { version = "1.0", features = ["macros", "net", "rt", "parking_lot"] }
tokio-rustls = { version = "0.25", default-features = false, features = ["logging", "tls12"] }
rustls = { version = "0.22", default-features = false, features = ["logging", "tls12"] }
pki-types = { package = "rustls-pki-types", version = "1" }
rustls-rustcrypto = { git = "https://github.com/RustCrypto/rustls-rustcrypto", version = "0.1" }
env_logger = { version = "0.11" }

[target.'cfg(target_os = "hermit")'.dependencies.hermit]
path = "../../hermit"
default-features = false

[features]
default = ["fsgsbase", "dhcpv4", "pci", "pci-ids", "acpi", "tcp"]
vga = ["hermit/vga"]
dhcpv4 = ["hermit/dhcpv4"]
pci = ["hermit/pci"]
pci-ids = ["hermit/pci-ids"]
acpi = ["hermit/acpi"]
fsgsbase = ["hermit/fsgsbase"]
smp = ["hermit/smp"]
tcp = ["hermit/tcp"]
instrument = ["hermit/instrument"]
trace = ["hermit/trace"]
rtl8139 = ["hermit/rtl8139"]
ci = []
