[package]
name = "tokio-minimal"
authors = ["Stefan Lankes <slankes@eonerc.rwth-aachen.de>"]
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
tokio = { version = "1.19", default-features = false, features = ["rt", "rt-multi-thread", "macros"] }

[target.'cfg(target_os = "hermit")'.dependencies.hermit]
path = "../../hermit"
default-features = false

[features]
default = ["pci", "pci-ids", "acpi", "dhcpv4", "tcp"]
vga = ["hermit/vga"]
dhcpv4 = ["hermit/dhcpv4"]
pci = ["hermit/pci"]
pci-ids = ["hermit/pci-ids"]
acpi = ["hermit/acpi"]
fsgsbase = ["hermit/fsgsbase"]
smp = ["hermit/smp"]
tcp = ["hermit/tcp"]
instrument = ["hermit/instrument"]
trace = ["hermit/trace"]
