[package]
name = "tokio-minimal"
authors = ["Stefan Lankes <slankes@eonerc.rwth-aachen.de>"]
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
tokio = { version = "1.19", default-features = false, features = ["rt", "rt-multi-thread", "macros"] }

[target.'cfg(target_os = "hermit")'.dependencies.hermit]
path = "../../hermit"
default-features = false

[features]
default = ["hermit/acpi", "hermit/dhcpv4", "hermit/pci", "hermit/pci-ids", "hermit/tcp"]
