[package]
name = "vsock"
version = "0.1.0"
edition = "2021"

[dependencies]

[target.'cfg(target_os = "hermit")'.dependencies.hermit-abi]
path = "../../hermit-abi"

[target.'cfg(target_os = "hermit")'.dependencies.hermit]
path = "../../hermit"
default-features = false

[target.'cfg(unix)'.dependencies]
libc = { version = "0.2" }

[features]
default = ["pci", "pci-ids", "acpi", "vsock"]
vga = ["hermit/vga"]
dhcpv4 = ["hermit/dhcpv4"]
pci = ["hermit/pci"]
pci-ids = ["hermit/pci-ids"]
acpi = ["hermit/acpi"]
fsgsbase = ["hermit/fsgsbase"]
smp = ["hermit/smp"]
tcp = ["hermit/tcp"]
udp = ["hermit/udp"]
instrument = ["hermit/instrument"]
trace = ["hermit/trace"]
rtl8139 = ["hermit/rtl8139"]
vsock = ["hermit/vsock"]
