[package]
name = "wasmtime-demo"
version = "0.1.0"
edition = "2021"
authors = ["Stefan Lankes <slankes@eonerc.rwth-aachen.de>"]
readme = "README.md"
license = "MIT/Apache-2.0"
keywords = ["wasm", "webassembly"]

[features]
default = []
ci = []

[dependencies]
anyhow = "1.0"
bitflags = "2.5"
cfg-if = "1"
log = { version = "0.4" } #, features = ["kv_unstable"]}
simple_logger = { version = "5.0", default-features = false }
wasmtime = { version = "32", default-features = false, features = ["std", "runtime", "cranelift", "threads", "parallel-compilation", "custom-virtual-memory"] } #"pooling-allocator", "incremental-cache", "wat", "gc", "component-model"] }
zerocopy = { version = "0.8", default-features = false, features = ["alloc", "derive", "simd-nightly"] }

[target.'cfg(target_os = "hermit")'.dependencies]
hermit = { path = "../../hermit", default-features = false, features = ["acpi", "pci", "fsgsbase", "fs", "tcp", "dhcpv4", "mmap"] }
hermit-abi = { path = "../../hermit-abi", default-features = false }
wasi = { version = "0.11" }