[package]
name = "webserver"
version = "0.1.0"
edition = "2021"

[dependencies]
ascii = "1"
time = "0.3"
tiny_http = "0.12"

[target.'cfg(target_os = "hermit")'.dependencies.hermit]
path = "../../hermit"
default-features = false

[features]
default = ["pci", "pci-ids", "fs", "acpi", "tcp"]
fs = ["hermit/fs"]
vga = ["hermit/vga"]
dhcpv4 = ["hermit/dhcpv4"]
pci = ["hermit/pci"]
pci-ids = ["hermit/pci-ids"]
acpi = ["hermit/acpi"]
fsgsbase = ["hermit/fsgsbase"]
smp = ["hermit/smp"]
tcp = ["hermit/tcp"]
instrument = ["hermit/instrument"]
trace = ["hermit/trace"]
