[package]
name = "webserver"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
http = "1"
http-body-util = "0.1"
hyper = { version = "1", default-features = false }
hyper-util = { version = "0.1", default-features = false, features = ["server-auto", "tokio"] }
tokio = { version = "1.0", features = ["macros", "net", "rt", "parking_lot"] }
env_logger = { version = "0.10" }

[target.'cfg(target_os = "hermit")'.dependencies.hermit]
path = "../../hermit"
default-features = false

[features]
default = ["pci", "pci-ids", "fs", "acpi", "tcp", "dhcpv4"]
fs = ["hermit/fs"]
vga = ["hermit/vga"]
dhcpv4 = ["hermit/dhcpv4"]
pci = ["hermit/pci"]
pci-ids = ["hermit/pci-ids"]
acpi = ["hermit/acpi"]
fsgsbase = ["hermit/fsgsbase"]
smp = ["hermit/smp"]
tcp = ["hermit/tcp"]
instrument = ["hermit/instrument"]
trace = ["hermit/trace"]
